# src/routes/index.ts
@@ -7,6 +7,7 @@ import { seatsRouter } from './seats.route';
 import { showtimeRouter } from './showtimes.route';
 import { ticketsRouter } from './tickets.route';
 import { concessionRouter } from './concessions.route';
+import { priceRouter } from './prices.route';
 import { swaggerRouter } from './swagger.route';
 
 const routes = Router();
@@ -17,6 +18,7 @@ routes.use('/seats', seatsRouter);
 routes.use('/showtimes', showtimeRouter);
 routes.use('/tickets', ticketsRouter);
 routes.use('/concessions', concessionRouter);
+routes.use('/prices', priceRouter);
 routes.use('/', swaggerRouter);
 
 export default routes;
